name:                rp2-asteroids
version:             0.2
synopsis:            Minimalistic Astroids implementation on the real projective plane
license:             ISC
license-file:        LICENSE
author:              Johannes Witzig
copyright:           2018 Johannes Witzig
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable rp2-asteroids
  main-is:             rp2-asteroids.hs
  default-language:    Haskell2010
  build-depends:       base,
                       random,
                       haste-lib
  GHC-Options: -Wall
               -fno-warn-type-defaults
               -fno-warn-unused-do-bind
               -fno-warn-orphans
